--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "city-explorer-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
